# wisperai

./: AGENTS.md  package.json
docs/: DEVELOPMENT_PHASES.md  WISHPER_PRO_PLAN.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/audio/: encoder.rs  mod.rs  recorder.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/menubar/: LiveText.tsx  MenubarWidget.tsx  StyleSwitcher.tsx  Timer.tsx  Waveform.tsx  index.ts
src/lib/: index.ts  recording.ts
src/pages/: Dashboard.tsx  Menubar.tsx  Settings.tsx  index.ts
src/stores/: index.ts  recordingStore.ts  settingsStore.ts
