[package]
name = "wisperai"
version = "0.1.0"
description = "Wisper Pro - AI Voice-to-Text Desktop App"
authors = ["Jaydeep"]
edition = "2021"

[lib]
name = "wisperai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
keyring = "3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

